--- a/index.html
+++ b/index.html
@@ -874,9 +874,8 @@ ourg.">
                       <li> <a href="http://afnom.github.io/"> The University of Birmingham Hacking Club</a></li>
 
                       <li> Calendar of events in the Security,
-                          Privacy, and Cryptography,
-                          from <br><a href="http://www.confsearch.org/confsearch/faces/pages/topic.jsp?topic=Security&sortMode=1&graphicView=1">Confsearch</a>,
-                        <a href="https://www.iacr.org/events/">IACR</a>, and <a href="http://www.uclouvain.be/crypto/callforpapers/forthcoming">
+                          Privacy, and Cryptography, from <br>
+                        <a href="https://www.iacr.org/events/">IACR</a> and <a href="http://www.uclouvain.be/crypto/callforpapers/forthcoming">
                           UCL Crypto Group
                         </a>
                       </li>
@@ -886,9 +885,7 @@ ourg.">
                           (for reference only)
                           at <br><a href="https://scholar.google.co.uk/citations?view_op=top_venues&hl=en&vq=eng_computersecuritycryptography">Google
                           Scholar
-                          Metrics</a>, <a href="https://academic.microsoft.com/#/news/38652104?nte=3&nts=0">
-                          Microsoft Academic Search
-                          </a>, <a href="http://jianying.space/conference-ranking.html">
+                          Metrics</a>, <a href="http://jianying.space/conference-ranking.html">
                           CIF-based ranking
                            </a>,
                            or <a href="http://faculty.cs.tamu.edu/guofei/sec_conf_stat.htm">another
@@ -900,9 +897,6 @@ ourg.">
                           An Automatic Crypto Research Topic or Paper Title Generator </a></li>
                       
                       <li><a href="http://pdos.csail.mit.edu/scigen/">SCIgen - An Automatic CS Paper Generator </a> </li>
-		      <li><a href="
-		      https://archibus.uni.lux/archibus/schema/ab-core/views/process-navigator/navigator-details.axvw">UoLux
-		      Room booking system</a></li>
                           </ul>
 
                     </font>
