--- a/index.html
+++ b/index.html
@@ -874,15 +874,17 @@ ourg.">
                       <li> <a href="http://afnom.github.io/"> The University of Birmingham Hacking Club</a></li>
 
                       <li> Calendar of events in the Security,
-                          Privacy, and Cryptography, from <br>
-                        <a href="https://www.iacr.org/events/">IACR</a> and <a href="http://www.uclouvain.be/crypto/callforpapers/forthcoming">
+                        Privacy, and Cryptography, from <br>
+                        <a href="http://www.ieee-security.org/CFP/Cipher-Call-for-Papers.ht
+ml"> Cipher CFP </a>,
+                        <a href="https://www.iacr.org/events/">IACR</a>, and <a href="http://www.uclouvain.be/crypto/callforpapers/forthcoming">
                           UCL Crypto Group
                         </a>
                       </li>
                       
                       <li>
-                          Top Crypto and Security Conferences Ranking
-                          (for reference only)
+                          Crypto and Security Conferences Ranking (for
+                          reference only)
                           at <br><a href="https://scholar.google.co.uk/citations?view_op=top_venues&hl=en&vq=eng_computersecuritycryptography">Google
                           Scholar
                           Metrics</a>, <a href="http://jianying.space/conference-ranking.html">
