--- a/index.html
+++ b/index.html
@@ -1205,20 +1205,9 @@ ml"> Cipher CFP </a>,
                         src="images/email.png" alt="icon
                         2"><a href="images/email/email1.png"><img style="width:
                         130px; height: 30px"
-                        src=images/email/email1.png></a>(Work account)
-                        <br>
-                        <span style="padding-left:40%"><a href="doc/5A096C34.asc">
-                        PGP Key</a></span> 
-                        <br>
-                        <span style="padding-left:30px"> <a href="images/email/email2.png"><img style="width:
-                        130px; height: 30px"
-                        src=images/email/email2.png></a>(Personal account)</span>
-                        <br>
-                        <span style="padding-left:40%"><a href="doc/5A096C34.asc">
-                        PGP Key</a></span>
-                        <br>
+                        src=images/email/email1.png></a><a href="doc/5A096C34.asc">
+                        PGP Key</a>
                         </p>
-                        <br>
                         <p><img style="width: 25px; height: 25px;"
                         src="images/web.png" alt="icon 3"
                         /><a class="link_orange"
