--- a/index.html
+++ b/index.html
@@ -111,36 +111,30 @@ ourg.">
                       <div class="clearfix"></div>
                     </div>
                     <div class="col-lg-offset-4 JYuinfo_right">
-                      <p> <font size="4"> I'll be a lecturer
-                      (equivalent to U.S. assistant professor) at
-                      Monash Unviersity, Australia, from this
-                      September. Currently, I am a research fellow
-                      working
+                      <p> <font size="4"> I'm a lecturer (equivalent
+                      to U.S. assistant professor) at Monash
+                      Unviersity, Australia, and an honorary research
+                      fellow working
+                      with <a href="http://www.cs.bham.ac.uk/~mdr/">
+                      Prof. Mark Ryan</a> in
+                      the <a href="http://www.cs.bham.ac.uk">School of
+                      Computer
+                      Science</a>, <a href="http://www.birmingham.ac.uk/">University
+                      of Birmingham</a>, UK, where I received my PhD
+                      in computer science. I did my postdoc
                       with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
                       Prof. Paulo Esteves-Verissimo
-                          </a>
-                          at <a href="http://wwwen.uni.lu/snt/research/critix">
-                            CritiX
-                          </a>, <a href="http://wwwen.uni.lu/snt">
-                            SnT
+                          </a>(IEEE and ACM Fellow)
+                      at <a href="http://wwwen.uni.lu/snt"> SnT
                           </a>, <a href="http://wwwen.uni.lu">
                             University of Luxembourg
-                          </a>. I am also an honorary research fellow
-                          working
-                          with <a href="http://www.cs.bham.ac.uk/~mdr/">
-                          Prof. Mark Ryan</a> in
-                          the <a href="http://www.cs.bham.ac.uk">School
-                          of Computer
-                          Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                          of Birmingham</a>, UK, where I received my
-                          PhD in computer science.<br><br>  My
-                          research interests are in the area of cyber
-                          security and cryptography. In particular,
-                          the focus of my research has been on design
-                          and analysis of cryptographic protocols,
-                          cryptographic key management, blockchain
-                          consensus, and ledger-based
-                          applications.<br><br>
+                          </a>. <br><br> My research interests are in
+                          the area of cyber security and
+                          cryptography. In particular, the focus of my
+                          research has been on design and analysis of
+                          cryptographic protocols, cryptographic key
+                          management, blockchain consensus, and
+                          ledger-based applications.<br><br>
 
 
                                <img style="width: 80px; height:
