--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ ourg.">
 <!--                                <li><a href="#templatemo-follow">FOLLOW</a></li>
 -->
 <!-- <li><a rel="nofollow" href="web/resume.html" class="external-link">CV</a></li> -->
-<li><a rel="nofollow" href="./doc/J.YU.pdf" class="external-link">CV</a></li>
+<!-- <li><a rel="nofollow" href="./doc/J.YU.pdf" class="external-link">CV</a></li> -->
                                 <!-- <li><a rel="nofollow" href="web/index_cn.html" class="external-link">中文</a></li> -->
                             </ul>
                         </div><!--/.nav-collapse -->
