--- a/index.html
+++ b/index.html
@@ -1208,14 +1208,11 @@ ml"> Cipher CFP </a>,
                         href="#"><span class="txt_black"><font size=3>www.jiangshanyu.com</font></span></a></p>
                         <p><img style="width: 22px; height: 22px;"
                                 src="images/location.png" alt="icon 4"
-                                /> Maison du Nombre (Building), <br>
-                                &nbsp &nbsp &nbsp &nbsp E02 0245-040
-                                (room), <br> &nbsp &nbsp &nbsp &nbsp
-                                University of Luxembourg, <br> &nbsp
-                                &nbsp &nbsp &nbsp 6, Avenue de la
-                                Fonte, L-4364,<br> &nbsp &nbsp &nbsp
-                                &nbsp Esch-sur-Alzette,
-                                Luxembourg.  </p>
+                                /> Faculty of Information
+                                Technology<br> &nbsp &nbsp &nbsp &nbsp
+                                Monash University, <br> &nbsp &nbsp
+                                &nbsp &nbsp Melbourne, VIC,
+                                Australia.</p>
                     </div>
                     
                       <div class="container">
