--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@ ourg.">
                       Unviersity, Australia, and an honorary research
                       fellow working
                       with <a href="http://www.cs.bham.ac.uk/~mdr/">
-                      Prof. Mark Ryan</a> in
+                      Prof. Mark Ryan</a>
+                      (<a href="https://garage.ext.hp.com/us/en/hp-labs/hp_sponsors_new_chairincybersecurityattheuniversityofbirmingham.html">
+                      HP Chair in Cybersecurity
+                          </a>) in
                       the <a href="http://www.cs.bham.ac.uk">School of
                       Computer
                       Science</a>, <a href="http://www.birmingham.ac.uk/">University
