--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ ourg.">
 
                             <br><br><b>
                         Contact:</b> <br><a href="images/email/email1.png"><img style="width:
-                        190px; height: 40px"
+                        190px; height: 30px"
                         src=images/email/email1.png></a><a href="doc/5A096C34.asc">
-                        (PGP Key)</a>
+                        <font size="3">(PGP Key)</font></a>
                             </div>
                           <!-- </div> -->
                           <br>
