--- a/index.html
+++ b/index.html
@@ -702,7 +702,12 @@ ourg.">
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                               <li><b>Comference Committee</b></li>
-                            <ul type="circle">
+                              <ul type="circle">
+                                <li>
+                                PC member, 38th IEEE International
+                                Symposium on Reliable Distributed
+                                Systems (SRDS), 2019.</a>
+                              </li>
                               <li>
                                 PC
                                 member, <a href="http://globecom2018.ieee-globecom.org">IEEE
