--- a/index.html
+++ b/index.html
@@ -866,12 +866,12 @@ ourg.">
                     <!--     </ul> -->
                     <!--   </li> -->
                     <!-- </ul> -->
-                    <font size="5"><b>PhD Student supervision:</b></font>
-	                  <ul type="circle"; style="margin-bottom:
-                              6px">
-                            <li> Tong Cao, 2018-2021 (expected). </li>
-                            <li> Cristian Mirto, 2018-2021 (expected). </li><br>
-                          </ul>
+                    <!-- <font size="5"><b>PhD Student supervision:</b></font> -->
+	            <!--       <ul type="circle"; style="margin-bottom: -->
+                    <!--           6px"> -->
+                    <!--         <li> Tong Cao, 2018-2021 (expected). </li> -->
+                    <!--         <li> Cristian Mirto, 2018-2021 (expected). </li><br> -->
+                    <!--       </ul> -->
 
                           <font size="5"><b>Other
                     Links: </b></font>
