--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+
+                        <li> <b>[2018-07-01] </b> As co-chair, I'm
+                          delighted to see the 74th Meeting of the
+                          IFIP WG 10.4 on Blockchian has been very
+                          successful. All the material will be
+                          available
+                          at <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/index.htm">
+                          here.
+                          </a>
+
                         <li> <b>[2018-05-22]
                           CHARITY.</b> Prof. Mark Ryan's Supporting
                           for Aframano, a village in Ghana,
