--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ourg.">
                           IFIP WG 10.4 on Blockchian has been very
                           successful. All the material will be
                           available
-                          at <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/index.htm">
+                          at <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">
                           here.
                           </a>
 
