--- a/index.html
+++ b/index.html
@@ -118,17 +118,20 @@ ourg.">
                     </div>
                     <div class="col-lg-offset-4 JYuinfo_right">
                       <p> <font size="4"> I'm a lecturer (equivalent
-                      to U.S. assistant professor) at Monash
-                      Unviersity, Australia, and an honorary research
+                      to U.S. assistant professor)
+                      at <a href="https://www.monash.edu/cybersecurity-lab">Cybersecurity
+                      Lab</a>, <a href="https://www.monash.edu/it">Faculty of Information Technology,</a> <a href="https://www.monash.edu">
+                            Monash Unviersity
+                          </a>, Australia, and an honorary research
                       fellow working
                       with <a href="http://www.cs.bham.ac.uk/~mdr/">
                       Prof. Mark Ryan</a>
                       (<a href="https://garage.ext.hp.com/us/en/hp-labs/hp_sponsors_new_chairincybersecurityattheuniversityofbirmingham.html">
                       HP Chair in Cybersecurity
                           </a>) in
-                      the <a href="http://www.cs.bham.ac.uk">School of
-                      Computer
-                      Science</a>, <a href="http://www.birmingham.ac.uk/">University
+                      the <a href="http://sec.cs.bham.ac.uk">
+                            Centre for Cyber Security and Privacy
+                          </a>, <a href="http://www.birmingham.ac.uk/">University
                       of Birmingham</a>, UK, where I received my PhD
                       in computer science. I did my postdoc
                       with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
@@ -140,9 +143,9 @@ ourg.">
                           </a>. <br><br> My research interests are in
                           the area of cyber security and
                           cryptography. In particular, the focus of my
-                          research has been on design and analysis of
-                          cryptographic protocols, cryptographic key
-                          management, blockchain consensus, and
+                          research has been on Blockchain consensus,
+                          Blockchain security and privacy,
+                          cryptographic key management, and
                           ledger-based applications.<br><br>
 
 
