--- a/index.html
+++ b/index.html
@@ -704,10 +704,10 @@ ourg.">
                             <li><b>Workshop Organization</b></li>
                             <ul type="circle">
                               <li>
-                                Co-Chair, 74th Meeting of the IFIP WG
+                                Co-Chair, <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
                                 10.4 - Technological and societal
                                 challenges to blockchain dependability
-                                and security, Clervaux, Luxembourg,
+                                and security</a>, Clervaux, Luxembourg,
                                 2018.</li>
                               <li>
                                   Chair, <a href="https://blockchainbirmingham.wordpress.com/">
