--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                          <li>
+                            <b>[2018-11-15] </b> A paper on "New
+                            Empirical Traceability Analysis of
+                            CryptoNote-Style Blockchains" has been
+                            accepted by Financial Cryptography and
+                            Data Security 2019 (FC19).
+                          </li>
+
                         <li> <b>[2018-07-01] </b> As co-chair, I'm
                           delighted to see the 74th Meeting of the
                           IFIP WG 10.4 on Blockchian has been very
@@ -163,7 +171,7 @@ ourg.">
                           available
                           at <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">
                           here.
-                          </a>
+                          </a></li>
 
                         <li> <b>[2018-05-22]
                           CHARITY.</b> Prof. Mark Ryan's Supporting
@@ -425,7 +433,7 @@ ourg.">
                                   communications"</b>.<br>
                                   <i>
                                     IEEE Security & Privacy
-                                  </i>, 2018, to appear.
+                                  </i>, Vol. 16, No.5, pp. 60-70, 2018.
                                 </li>
 
                                 <li>
@@ -477,7 +485,23 @@ ourg.">
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "7">
                           <li>
-                            Kevin Milner, Cas Cremers, Jiangshan Yu,
+                            Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
+                            Yang, Qiuliang Xu, and Wang Fat
+                            Lau. <br> <b>"New Empirical Traceability
+                            Analysis of CryptoNote-Style
+                            Blockchains"</b>. <br> <i> Financial
+                            Cryptography and Data Security 2019
+                            (FC19).</i>
+                          </li>
+                          <li>
+                            Runchao Han, Jiangshan Yu, Joseph Liu, and
+                            Peng Zhang. <br> <b>"Evaluating
+                            CryptoNote-Style
+                            blockchains"</b>. <br> <i> Inscrypt
+                            2018.</i>
+                          </li>
+                          <li>
+                            Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
@@ -486,13 +510,13 @@ ourg.">
                           </li>
 
                           <li>
-                            Jiangshan Yu, Mark Ryan and Liqun
+                            Jiangshan Yu, Mark Ryan, and Liqun
                             Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
                             compromisable storage systems"</b></a>, <br> <i>IEEE TrustCom 2017.</i>
                           </li>
 
                           <li>Marcus Völp, Francisco Rocha, Jérémie
-                          Decouchant, Jiangshan Yu and Paulo
+                          Decouchant, Jiangshan Yu, and Paulo
                           Verissimo.<br> <a href="http://orbilu.uni.lu/handle/10993/32521"><b>"Permanent
                           Reencryption: How to Survive Generations of
                           Cryptanalysts to
@@ -701,54 +725,49 @@ ourg.">
                     </b></font>
 	                  <ul type="disc"; style="margin-bottom:
                               6px">
-                            <li><b>Workshop Organization</b></li>
+                            <li><b>Program (Co-)Chair</b></li>
                             <ul type="circle">
                               <li>
-                                Co-Chair, <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
+                                <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
                                 10.4 - Technological and societal
                                 challenges to blockchain dependability
                                 and security</a>, Clervaux, Luxembourg,
                                 2018.</li>
                               <li>
-                                  Chair, <a href="https://blockchainbirmingham.wordpress.com/">
+                                  <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
-                              <li><b>Comference Committee</b></li>
+                              <li><b>Comference Program Committee Member</b></li>
                               <ul type="circle">
                                 <li>
-                                PC member, 38th IEEE International
-                                Symposium on Reliable Distributed
-                                Systems (SRDS), 2019.</a>
+                                38th IEEE International Symposium on
+                                Reliable Distributed
+                                Systems <b>(SRDS)</b>, 2019.</a>
                               </li>
                               <li>
-                                PC
-                                member, <a href="http://globecom2018.ieee-globecom.org">IEEE
-                                Global Communications Conference
-                                (GLOBECOM), 2018.</a>
+                                IEEE Global Communications
+                                Conference
+                                <b>(GLOBECOM)</b>, 2018.
                               </li>
                               <li>
-                                PC
-                                member, <a href="https://bcrb18.fim.uni-passau.de/index.html">
-                                DSN Workshop on Byzantine Consensus
-                                and Resilient Blockchains (BCRB'18),
-                                2018.</a>
+                                DSN Workshop on Byzantine
+                                Consensus and Resilient
+                                Blockchains <b>(BCRB'18)</b>,
+                                2018.
                               </li>
 
                               <li>
-                                PC
-                                member, <a href="http://icc2018.ieee-icc.org">IEEE
+                                IEEE
                                 International Conference on
-                                Communications (ICC), 2018.</a>
+                                Communications <b>(ICC)</b>, 2018.
                               </li>
 
-                              <li>PC
-                                  member, <a href="http://nsclab.org/ispec2017/">
-                                  International Conference on
+                              <li> International Conference on
                                   Information Security Practice and
-                                  Experience (ISPEC), 2017.
-                              </a></li>
-	                      <li>PC member, <a href="http://mkp.com">Software Architecture for Big Data and the Cloud, 2016.</a></li>
+                                  Experience <b>(ISPEC)</b>, 2017.
+                              </li>
+	                      <li>Software Architecture for Big Data and the Cloud, 2016.</li>
                             </ul>
                             
                             <br>
