--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@ ourg.">
                           </a>. <br><br> My research interests are in
                           the area of cyber security and
                           cryptography. In particular, the focus of my
-                          research has been on Blockchain consensus,
+                          research has been on (designing and
+                          attacking) Blockchain consensus,
                           Blockchain security and privacy,
                           cryptographic key management, and
                           ledger-based applications.<br><br>
