--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ ourg.">
                             Empirical Traceability Analysis of
                             CryptoNote-Style Blockchains" has been
                             accepted by Financial Cryptography and
-                            Data Security 2019 (FC19).
+                            Data Security 2019 (FC19, 33/178=18.5%).
                           </li>
 
                         <li> <b>[2018-07-01] </b> As co-chair, I'm
