--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ ourg.">
 
                             My life would be happier if I found very
                             good PhD students to work with. If this is
-                            you, do apply! <br> <a href="doc/phd_ad.txt">More info.</a>
+                            you, do apply! <br> <a href="doc/phd_position.txt">More info.</a>
 
                             <br><br><b>
                         Contact:</b> <br><a href="images/email/email1.png"><img style="width:
