--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+
+                          <li>
+                            <b>[2018-11-30] </b> I'm delighted to be
+                          invited to attend the 75th Meeting of the
+                            <a href="https://www.dependability.org/wg10.4/"> IFIP WG 10.4 Working Group on
+                           Dependable Computing and Fault Tolerance.</a>
+                          </li>
+
                           <li>
                             <b>[2018-11-15] </b> A paper on "New
                             Empirical Traceability Analysis of
