--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                          <li>
+                            <b>[2018-12-09] </b> Our paper "ANCHOR:
+                          logically-centralized security for
+                          Software-Defined Networks" has been accepted
+                          for publication by ACM Transactions on
+                          Privacy and Security (ACM TOPS, previously
+                          known as ACM TISSEC.)
+                          </li>
 
                           <li>
                             <b>[2018-11-30] </b> I'm delighted to be
