--- a/index.html
+++ b/index.html
@@ -442,8 +442,20 @@ ourg.">
 	                    <li><b>Journal:</b><br>
                               <ol type="1" start = "2">
                                 <li>
+                                  Diego Kreutz, Jiangshan Yu, Fernando
+                                  Ramos, and Paulo Verissimo. <br><b>"ANCHOR:
+                                  logically-centralized security for
+                                  Software-Defined Networks"</b>.<br>
+                                  <i>
+                                    ACM Transactions on Privacy and
+                          Security (ACM TOPS, previously known as ACM
+                          TISSEC.)
+                                  </i> 2019.
+                                </li>
+
+                                <li>
                                   Diego Kreutz, Jiangshan Yu, Paulo
-                                  Verissimo, Catia Magalhaes, Fernando
+                                  Verissimo, Catia Magalhaes, and Fernando
                                   Ramos. <br><b>"The KISS principle in
                                   Software-Defined Networking: a
                                   framework for secure
