--- a/index.html
+++ b/index.html
@@ -450,7 +450,8 @@ ourg.">
                                     ACM Transactions on Privacy and
                           Security (ACM TOPS, previously known as ACM
                           TISSEC.)
-                                  </i> 2019.
+                                  </i> 2019. (<a href="doc/paper/ANCHOR-proof.zip">Tamarin
+                                  code</a>)
                                 </li>
 
                                 <li>
@@ -604,17 +605,6 @@ ourg.">
 
                       <li><b>Draft:</b><br>
 	                      <ul type="circle">
-
-                                <li>
-                                  Diego Kreutz, Jiangshan Yu, Fernando
-                                  M. V. Ramos, and Paulo Jorge Esteves
-                                  Veríssimo. "ANCHOR:
-                                  logically-centralized security for
-                                  Software-Defined Networks." <i>CoRR
-                                  abs/1711.03636</i>,
-                                  2017. (<a href="doc/paper/ANCHOR-proof.zip">Tamarin
-                                  code</a>)
-				</li>
 
 				<li>Jiangshan Yu, David Kozhaya,
 				Jeremie Decouchant, and Paulo
