--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@ ourg.">
                           </li>
 
                           <li>
-                            <b>[2018-11-15] </b> A paper on "New
+                            <b>[2018-11-15] </b> A paper
+                            on <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf">"New
                             Empirical Traceability Analysis of
-                            CryptoNote-Style Blockchains" has been
+                            CryptoNote-Style Blockchains"</a> has been
                             accepted by Financial Cryptography and
                             Data Security 2019 (FC19, 33/178=18.5%).
                           </li>
@@ -517,17 +518,18 @@ ourg.">
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
                             Yang, Qiuliang Xu, and Wang Fat
-                            Lau. <br> <b>"New Empirical Traceability
-                            Analysis of CryptoNote-Style
-                            Blockchains"</b>. <br> <i> Financial
+                            Lau. <br> <b><a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf">"New
+                            Empirical Traceability Analysis of
+                            CryptoNote-Style
+                            Blockchains"</a></b>. <br> <i> Financial
                             Cryptography and Data Security 2019
                             (FC19).</i>
                           </li>
                           <li>
                             Runchao Han, Jiangshan Yu, Joseph Liu, and
-                            Peng Zhang. <br> <b>"Evaluating
+                            Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating
                             CryptoNote-Style
-                            blockchains"</b>. <br> <i> Inscrypt
+                            blockchains"</b></a>. <br> <i> Inscrypt
                             2018.</i>
                           </li>
                           <li>
