--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@ ourg.">
                         <div style="height:9cm; overflow:auto">
 
                           <li>
+                            <b>[2019-01-31] </b> Our paper "RepuCoin:
+                          Your Reputation is Your Power" has been
+                          accepted for publication by IEEE Transactions
+                          on Computers.
+                          </li>
+
+                          <li>
                             <b>[2018-12-09] </b> Our paper "ANCHOR:
                           logically-centralized security for
                           Software-Defined Networks" has been accepted
@@ -605,22 +612,18 @@ ourg.">
 
                       <br>
 
-                      <li><b>Draft:</b><br>
-	                      <ul type="circle">
+                      <!-- <li><b>Draft:</b><br> -->
+	              <!--         <ul type="circle"> -->
 
-				<li>Jiangshan Yu, David Kozhaya,
-				Jeremie Decouchant, and Paulo
-				Esteves-Verissimo. "RepuCoin: Your
-				Reputation is Your
-				Power." <i>Cryptology ePrint Archive:
-				Report 2018/239.</i></li>
-                              </ul>
-                      </li>
+		      <!--   	<li>Jiangshan Yu, David Kozhaya, -->
+		      <!--   	Jeremie Decouchant, and Paulo -->
+		      <!--   	Esteves-Verissimo. "RepuCoin: Your -->
+		      <!--   	Reputation is Your -->
+		      <!--   	Power." <i>Cryptology ePrint Archive: -->
+		      <!--   	Report 2018/239.</i></li> -->
+                      <!--         </ul> -->
+                      <!-- </li> -->
                     </ul>
-
-                          <!-- Kevin, Cas, JS, and Mark, Detecting the
-                         Misuse of Secrets:\\Foundations and
-                         Protocols-->
                     <br>
                     <font size="5"><b>Grant, Awards, and scholarships: </b></font>
 	                  <ul type="disc"; style="margin-bottom:
