--- a/index.html
+++ b/index.html
@@ -449,6 +449,17 @@ ourg.">
 <br>
 	                    <li><b>Journal:</b><br>
                               <ol type="1" start = "2">
+
+                                <li>
+                                  Jiangshan Yu, David Kozhaya, Jeremie
+                                  Decouchant, and Paulo
+                                  Verissimo. <br><b>"RepuCoin: Your
+                                  Reputation is Your Power"</b>.<br>
+                                  <i>
+                                    IEEE Transactions on Computers.
+                                  </i> 2019. 
+                                </li>
+
                                 <li>
                                   Diego Kreutz, Jiangshan Yu, Fernando
                                   Ramos, and Paulo Verissimo. <br><b>"ANCHOR:
