--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@ ourg.">
                     <div class="col-md-4">
                         <div class="templatemo-service-item">
                             <div>
-                                <a href="#templatemo-wu" style="color: black">
+                                <a href="#templatemo-wu" style="color: bla
+ck">
+
                                 <img src="images/wu.png" alt="icon"/>
                                 <span class="templatemo-service-item-header">Martial Arts</span>
                             </div>
@@ -391,7 +393,7 @@ ourg.">
                           </b></font><br>
 
                           My work
-                          on <b> <a href="http://orbilu.uni.lu/handle/10993/32515">
+                          on <b> <a href="https://ieeexplore.ieee.org/document/8007243">
                           ledger-based end-to-end secure messaging
                           system</a></b> has attracted news media's
                           attention and has been covered by <u>more
@@ -417,6 +419,16 @@ ourg.">
                           by a University of Birmingham spin-off, and
                           have attracted funding support from Innovate
                           UK.<br><br>
+
+                          My research on blockchain consensus, called
+                          <a href="https://ieeexplore.ieee.org/document/8645706"><b>RepuCoin</b></a>,
+                          provides the first blockchain system that is
+                          able to tolerate 51% attack; and my work on
+                          <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf"><b>blockchain
+                          forensics</b></a>, has traced >70% transactions
+                          of supposed-to-be privacy- preserving
+                          cryptocurrencies, including Monero,
+                          ByteCoin, and DigitalNote.<br> <br>
 
                           I've co-designed a <b> secure booting
                             solution
