--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ etc.<br><br>
                           have attracted funding support from Innovate
                           UK.<br><br>
 
-                          Our on
+                          Our work on
                           <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf"><b>blockchain
                           forensics</b></a>, has traced >70% transactions
                           of supposed-to-be privacy- preserving
