--- a/index.html
+++ b/index.html
@@ -304,11 +304,10 @@ etc.
                     <div class="col-md-4">
                         <div class="templatemo-service-item">
                             <div>
-                                <a href="#templatemo-wu" style="color: bla
-ck">
-
+                                <a href="#templatemo-wu" style="color: black">
                                 <img src="images/wu.png" alt="icon"/>
                                 <span class="templatemo-service-item-header">Martial Arts</span>
+                                </a>
                             </div>
                             <div style="height:4cm; overflow:auto">
 				<p>I'm into all kinds of Martial arts,
