--- a/index.html
+++ b/index.html
@@ -406,17 +406,25 @@ Today,</i> etc.
 
                            Our research on blockchain consensus, called
                            <a href="https://ieeexplore.ieee.org/document/8645706"><b>RepuCoin</b></a>,
-                           provides <u>the first blockchain system that
-                           is able to tolerate 51% attack</u>. This work
-                           has been reported by <u>over 60 news media
-                           globally</u> including our
+                           provides <u>the first blockchain system
+                           that is able to tolerate 51%
+                           attack</u>. This system <u>may save
+                           potentially millions of US dollars every
+                           month from the attacks</u>, and increase the
+                           confidence of enterprise in adapting
+                           blockchains. (For example, from April 2018
+                           to Feb 2019, at least ten successful 51%
+                           attacks are identified, with a total loss
+                           of over 28 million US dollars.)
+
+                           This work has been reported by <u>over 60
+                           news media globally</u> including
                            <i> <a href="https://www.monash.edu/news/articles/world-first-secure-blockchain-with-good-reputati
 on">Monash
 News</a>, <a href="https://www.finder.com.au/repucoin-monash-reveals-51-resistant-10k-tps-pow-blockchain">
 Finder</a>, <a href="https://www.toutiao.com/i6671048333609402887">
 今日头条(Toutiao)</a>, ZDNet, Sohu, BTC Wires, ScienceDaily, Ethereum World News,
 EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
-
 
                            Our work on ledger-based end-to-end secure
                            messaging system,
@@ -428,8 +436,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                            of Birmingham spin-off as open source
                            software, and have attracted funding
                            support from Innovate UK. The system has
-                           attracted news media's attention and has
-                           been covered by <u>more than 40
+                           attracted news media's attention as a
+                           <u>breakthrough in messaging privacy</u>, and has
+                           been featured in <u>more than 40
                            international and national news
                            media </u>including <i> Science
                            Daily</i>, <i>Phys.org</i>, <i>ACM
@@ -463,8 +472,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           the world, to manage their next generation
                           network devices securely.
                           <br><br>
-<font size="5"><b>Publications and
-                              Manuscripts: </b></font><br>
+<font size="5"><b>Selected Publications: </b></font><br>
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
                               and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
